[package]
name = "cute-light-clib"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cute_lights = { git = "https://github.com/cute-lights/rust-sdk", tag = "v0.2.2" }
tokio = { version = "1.38.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]
name = "cutelight"

[build-dependencies]
cbindgen = "0.26.0"
csbindgen = "1.9.1"
